--- a/src/debate/debate.css
+++ b/src/debate/debate.css
@@ -40,4 +40,19 @@
     line-height: 30px;
     font-family: 'Raleway', sans-serif;
   }
-    
+  #debLogo {
+    max-width: 30%;
+  }
+  
+  #header {
+    background-color: #3B444C;
+  }
+  
+  a {
+    color: lightgrey;
+  }
+  
+  a:hover {
+    color: white;
+  }
+  
