--- a/src/energy/energy.css
+++ b/src/energy/energy.css
@@ -1,3 +1,18 @@
+#Echart, #partitionSVG {
+  background-color: #F7F9FB;
+  position:relative;
+  top: -50px;
+  width: 100%;
+  border-width: 1px;
+  border-radius: 1px;
+  border-color: #687864;
+  padding-bottom: 0px;
+  z-index: 0;
+}
+#partitionSVG {
+  position: relative;
+  top: -40px;
+}
 
 h1 {
     position:relative;
@@ -48,7 +63,7 @@ div.storytxt p{
 /* CSS for Year Text */
 #yeartxt {
     position: relative;
-    top:190px;
+    top:250px;
     left: -400px;
     z-index: 1;
 }
@@ -115,6 +130,7 @@ input[type=range] {
     height: 25;
     width: 50;
     font-size: 16px;
+    z-index: 5;
 }
 div.compareTxt {
     background-color: lightcyan;
@@ -155,13 +171,13 @@ div.compareTxt {
 /* CSS for Drop Down to Select File */
 #selectTxt{
     position: relative;
-    top: 70px;
+    top: 120px;
     left: -600px;
     z-index: 1;
 }
 #selectFile{
     position: relative;;
-    top:70px;
+    top:120px;
     width: 200px;
     left:-600px;
     z-index: 1;
